# oidn-aarch64-linux

./: CMakeLists.txt  MODIFIED.txt  README.md
apps/: CMakeLists.txt
cmake/: oidn_dnnl.cmake  oidn_ispc.cmake
common/: thread.cpp
core/: common.h  device.cpp  device.h
